EngineDesign/engine/native/include/ed_cea.h

/* Flattened C-order tables: index(i_pc,i_mr,i_eps) = (i_pc*n_mr + i_mr)*n_eps + i_eps.
 * Stored as double for bit-comparable parity with the float64 Python cache. */
typedef struct {
    const double *Pc_grid;   /* length n_pc, ascending */
    const double *MR_grid;   /* length n_mr, ascending */
    const double *eps_grid;  /* length n_eps, ascending */
    const double *cstar_table;
    const double *Cf_table;
    const double *Tc_table;
    const double *gamma_table;
    const double *R_table;
    const double *M_table;
    /* Vacuum thrust coefficient (RPA delivered-thrust basis). NULL when loaded
     * from a version-1 .bin (pre-Cf_vac); ed_cea_eval then reports NaN and
     * ed_evaluate refuses to compute delivered thrust (callers fall back). */
    const double *Cf_vac_table;
    size_t n_pc, n_mr, n_eps;

    /* Clamp bounds == grid endpoints (matches CEACache.{Pc,MR,eps}_{min,max}). */
    double Pc_min, Pc_max;
    double MR_min, MR_max;
    double eps_min, eps_max;

    /* Backing storage when loaded from file (NULL for caller-provided tables). */
    void *_owned;
} EdCeaTables;
/* Output of one CEA lookup (matches CEACache.eval() dict keys).
 * MIRRORED in ed_native.py (EdCeaResult ctypes.Structure) — keep in sync. */
typedef struct {
    double cstar_ideal;
    double Cf_ideal;
    double Tc;
    double gamma;
    double R;
    double M;
    double Cf_vac;  /* vacuum thrust coefficient; NaN if the table lacks it (v1 .bin) */
} EdCeaResult;
/* Evaluate CEA properties at (MR, Pc, eps). Pa is accepted for API parity with
 * the Python signature but, like the Python cache, does not affect 3D lookups.
 * Clamps inputs to grid bounds, then trilinear-interpolates each table. */
ed_status_t ed_cea_eval(const EdCeaTables *t,
                        double MR, double Pc, double Pa, double eps,
                        EdCeaResult *out);
/* Load tables from a .bin produced by export_cea_tables.py. Allocates backing
 * storage (offline/setup only, never in the hot loop). Free with ed_cea_free. */
ed_status_t ed_cea_load(const char *path, EdCeaTables *out);
void        ed_cea_free(EdCeaTables *t);